--- a/src/app/home.scss
+++ b/src/app/home.scss
@@ -14,7 +14,7 @@
 }
 
 .main {
-  padding: 5rem 0;
+  padding: 2rem 1rem;
   flex: 1;
   display: flex;
   flex-direction: column;
@@ -40,10 +40,7 @@
   /* flex-grow: 1; */
 }
 
-.title a {
-  color: #0070f3;
-  text-decoration: none;
-}
+
 
 .title a:hover,
 .title a:focus,
@@ -57,38 +54,30 @@
   font-size: 3rem;
   display: flex;
   align-items: center;
+  flex-direction: column;
 }
 
-.title,
-.description {
-  text-align: center;
+.title h1 {
+  font-size: 2rem;
 }
 
-.description {
-  line-height: 1.5;
-  font-size: 1.5rem;
+.title img {
+  width: 100px;
 }
 
-.code {
-  background: #fafafa;
-  border-radius: 5px;
-  padding: 0.75rem;
-  font-size: 1.1rem;
-  font-family: Menlo, Monaco, Lucida Console, Liberation Mono, DejaVu Sans Mono,
-    Bitstream Vera Sans Mono, Courier New, monospace;
-}
+
 
 .grid {
   display: flex;
   align-items: center;
   justify-content: center;
+  gap: 1rem;
   flex-wrap: wrap;
   max-width: 800px;
   margin-top: 3rem;
 }
 
 .card {
-  margin: 1rem;
   padding: 1rem;
   text-align: left;
   color: inherit;
@@ -118,14 +107,14 @@
   padding: 0.3rem 0;
 }
 
-.logo {
-  height: 1em;
-  margin-left: 0.5rem;
-}
-
 @media (max-width: 600px) {
   .grid {
     width: 100%;
     flex-direction: column;
+    padding: 1rem;
+  }
+
+  .grid .card {
+    width: 100%;
   }
 }
